# SlayTheSpireRL

./: .gitignore  .gitmodules  .mcp.json
dashboard/: index.html  (+2 more)
rl/: env.py  pyproject.toml  train.py
rl/data/: _codex_cards_raw.json  _codex_monsters_raw.json  _codex_powers_raw.json  _conversion_report_ironclad.json  _hand_observed_monsters.json  _monster_conversion_report.json  _stage2_card_fields.txt  _stage2_scoping_dump.txt  cards_ironclad.json.bak  convert_from_spire_codex.py  monsters_act1_sample.json.bak
rl/data/cards/: defect.json  ironclad.json
rl/data/monsters/: act1_overgrowth.json  act1_underdocks.json  act2_hive.json
rl/models/: stage1_training_history.json  stage2_training_history.json  training_history.json
rl/schema/: m0_observed_schema.json  m2_boss_loadouts.json  m2_vocab.json  p0_baseline_hash.json
rl/seeds/: m2_ironclad_seed_split.json
rl/sim/: card.py  combat.py  powers.py  run.py
rl/src/sts2rl/: __init__.py  agent.py  artifacts.py  batch_inference.py  checkpoint.py  config.py  curriculum.py  engine.py  entities.py  env.py  evaluator.py  features.py  live.py  logging.py  losses.py  m0.py  model.py  observation.py  policy.py  ppo.py  protocol.py  seeds.py  telemetry.py  training.py  trajectory.py  visibility.py
rl/tests/: test_artifacts.py  test_batch_inference.py  test_curriculum.py  test_engine_trace.py  test_entities.py  test_env.py  test_known_interactions.py  test_live.py  test_m1.py  test_mapobs.py  test_ppo.py  test_protocol.py  test_run.py  test_seeds.py  test_telemetry.py  test_training_data.py  test_visibility.py
(+69 files in other folders)
