[project]
name = "sts2-rl"
version = "0.1.0"
description = "Clean-room headless Slay the Spire 2 combat simulator + Gymnasium env + MaskablePPO training (Phase B)"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "sb3-contrib>=2.3.0",
    "numpy>=1.26.0",
    "pytest>=8.0.0",
]
