[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sts2-rl-v2"
version = "0.1.0"
description = "STS2 real-engine RL environment and M0 validation tools"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = ["torch>=2.2"]
export = ["pyarrow>=15.0"]

[project.scripts]
sts2-m0 = "sts2rl.m0:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sts2rl"]
